tests/NormalTests/paczka1/small_fuzzy/24126871.err
Error in line 13: skoib3UiPkk S261 35,8
